force-app/main/default/objects/Shippable_HW_SW_OTIF__c/Shippable_HW_SW_OTIF__c.object-meta.xml
<CustomObject>
    <label>Shippable HW SW OTIF</label>
    <nameField>
        <label>Shippable HW SW OTIF Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shippable HW SW OTIFs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>