force-app/main/default/objects/Shippable_HW_SW_OTIF__c/fields/Accounting_Yr_Month__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Yr_Month__c</fullName>
    <label>Accounting Yr Month</label>
    <length>20</length>
    <type>Text</type>
</CustomField>