force-app/main/default/objects/Shippable_HW_SW_OTIF__c/fields/Actual_Ship_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Actual_Ship_DateTime__c</fullName>
    <label>Actual Ship DateTime</label>
    <type>DateTime</type>
</CustomField>