force-app/main/default/objects/Shippable_HW_SW_OTIF__c/fields/Global_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Global_Customer_Name__c</fullName>
    <label>Global Customer Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>