force-app/main/default/objects/Shippable_HW_SW_OTIF__c/fields/Order_Booked_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Booked_Date__c</fullName>
    <label>Order Booked Date</label>
    <type>Date</type>
</CustomField>