force-app/main/default/objects/Shippable_HW_SW_OTIF__c/fields/Order_Line_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Line_Number__c</fullName>
    <label>Order Line Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>