force-app/main/default/objects/Shippable_HW_SW_OTIF__c/fields/Order_Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Tracking_Number__c</fullName>
    <label>Order Tracking Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>