force-app/main/default/objects/Shippable_HW_SW_OTIF__c/fields/Original_Promise_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Promise_Date__c</fullName>
    <label>Original Promise Date</label>
    <type>Date</type>
</CustomField>