force-app/main/default/objects/Shippable_HW_SW_OTIF__c/fields/Product_ID__c.field-meta.xml
<CustomField>
    <fullName>Product_ID__c</fullName>
    <label>Product ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>