force-app/main/default/objects/Shippable_HW_SW_OTIF__c/fields/Promise_Date__c.field-meta.xml
<CustomField>
    <fullName>Promise_Date__c</fullName>
    <label>Promise Date</label>
    <type>Date</type>
</CustomField>