force-app/main/default/objects/Shippable_HW_SW_OTIF__c/fields/Proposed_RDD_Flag__c.field-meta.xml
<CustomField>
    <fullName>Proposed_RDD_Flag__c</fullName>
    <label>Proposed RDD Flag</label>
    <length>200</length>
    <type>Text</type>
</CustomField>