force-app/main/default/objects/Shippable_HW_SW_OTIF__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <length>40</length>
    <type>Text</type>
</CustomField>